Make sure the website scales on smaller screens

--- a/site/public/css/app.css
+++ b/site/public/css/app.css
@@ -5,7 +5,8 @@ body {
 }
 
 body .container {
-  width: 800px;
+  width: 100%;
+  max-width: 800px;
   font-size: 90%;
   margin: 2em auto;
   background: white;
@@ -13,6 +14,9 @@ body .container {
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
+}
+
+body .container-inner {
   padding: 2em 5em;
 }
 
